fix: button-heart has been done

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Карачаевск</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
         <div class="card">
