--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <section class="popup">
+    <div class="popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__edit-profile">
           <input
             type="text"
-            class="popup__item-profile popup__name-input"
+            class="popup__item-profile popup__item-profile_input_name"
             value="Жак-Ив Кусто"
           >
           <input
             type="text"
-            class="popup__item-profile popup__job-input"
+            class="popup__item-profile popup__item-profile_input_job"
             value="Исследователь океана"
           >
           <button class="popup__save">Сохранить</button>
         </form>
         <button class="popup__close-form"></button>
       </div>
-    </section>
+    </div>
 
   </div>
 <script src="./scripts/script.js"></script>
