fix: for all the button have been added 'type'

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <div class="profile__info">
             <div class="profile__row">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__button-edit-name">
+              <button class="profile__button-edit-name" type="button">
               </button>
             </div>
             <p class="profile__text">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__button">
+        <button class="profile__button" type="button">
         </button>
       </section>
 
@@ -58,7 +58,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Гора Эльбрус</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
         <div class="card">
@@ -69,7 +69,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Домбай</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
         <div class="card">
@@ -80,7 +80,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Камчатка</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
         <div class="card">
@@ -91,7 +91,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Сахалин</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
         <div class="card">
@@ -102,7 +102,7 @@
           >
           <div class="card__info">
             <h2 class="card__title">Сочи</h2>
-            <img src="./images/heart.svg" alt="Сердце" class="card__like">
+            <button class="card__like" type="button"></button>
           </div>
         </div>
       </section>
@@ -126,9 +126,9 @@
             class="popup__item-profile popup__item-profile_input_job"
             value="Исследователь океана"
           >
-          <button class="popup__save">Сохранить</button>
+          <button class="popup__save" type="submit">Сохранить</button>
         </form>
-        <button class="popup__close-form"></button>
+        <button class="popup__close-form" type="button"></button>
       </div>
     </div>
 
