--- a/index.html
+++ b/index.html
@@ -115,16 +115,18 @@
     <div class="popup">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__edit-profile">
+        <form class="popup__edit-profile" name="form-about-profile">
           <input
             type="text"
             class="popup__item-profile popup__item-profile_input_name"
             value="Жак-Ив Кусто"
+            name="name-profile"
           >
           <input
             type="text"
             class="popup__item-profile popup__item-profile_input_job"
             value="Исследователь океана"
+            name="about-profile"
           >
           <button class="popup__save" type="submit">Сохранить</button>
         </form>
