feat: loading cards from js

--- a/index.html
+++ b/index.html
@@ -43,78 +43,7 @@
       </section>
 
       <section class="elements page__center">
-        <div class="card">
-          <img
-            src="./images/karachaevsk.jpg"
-            alt="Фото строения на фоне леса"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Карачаевск</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/mountain_elbrus.jpg"
-            alt="Фото поля с Эльбрусом на заднем фоне"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Гора Эльбрус</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/dombai.jpg"
-            alt="Фото горы на Домбае"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Домбай</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/kamchatka.jpg"
-            alt="Серфер на берегу Берингова моря"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Камчатка</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/sahalin.jpeg"
-            alt="Фото скал на берегу Сахалина"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Сахалин</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="./images/skypark.webp"
-            alt="Фото вида с края Скайпарка"
-            class="card__element"
-          >
-          <div class="card__info">
-            <h2 class="card__title">Сочи</h2>
-            <button class="card__like" type="button" aria-label="like-heart">
-            </button>
-          </div>
-        </div>
+
       </section>
     </main>
 
@@ -148,6 +77,21 @@
         </button>
       </div>
     </div>
+
+    <template id="card">
+      <div class="card">
+        <img
+          src="./images/skypark.webp"
+          alt="Фото вида с края Скайпарка"
+          class="card__element"
+        >
+        <div class="card__info">
+          <h2 class="card__title">Сочи</h2>
+          <button class="card__like" type="button" aria-label="like-heart">
+          </button>
+        </div>
+      </div>
+    </template>
 
   </div>
 <script src="./scripts/script.js"></script>
