feat: join js defer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
+  <script src="./scripts/script.js" defer></script>
 </head>
 <body class="page">
 
@@ -81,12 +82,12 @@
     <template id="card">
       <div class="card">
         <img
-          src="./images/skypark.webp"
-          alt="Фото вида с края Скайпарка"
+          src=" "
+          alt=" "
           class="card__element"
         >
         <div class="card__info">
-          <h2 class="card__title">Сочи</h2>
+          <h2 class="card__title"></h2>
           <button class="card__like" type="button" aria-label="like-heart">
           </button>
         </div>
@@ -94,7 +95,6 @@
     </template>
 
   </div>
-<script src="./scripts/script.js"></script>
 </body>
 </html>
 
