--- a/index.html
+++ b/index.html
@@ -52,32 +52,59 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <div class="popup">
-      <div class="popup__container">
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__edit-profile" name="form-about-profile">
-          <input
-            type="text"
-            class="popup__item-profile popup__item-profile_input_name"
-            value="Жак-Ив Кусто"
-            name="name-profile"
-            placeholder="Имя профиля"
-            required
-          >
-          <input
-            type="text"
-            class="popup__item-profile popup__item-profile_input_job"
-            value="Исследователь океана"
-            name="about-profile"
-            placeholder="О профиле"
-            required
-          >
-          <button class="popup__save" type="submit">Сохранить</button>
-        </form>
-        <button class="popup__close-form" type="button" aria-label="close-form">
-        </button>
+    <section class="popups">
+      <div class="popup popup_edit-profile">
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form class="popup__edit-profile" name="form-about-profile">
+            <input
+              type="text"
+              class="popup__item-profile popup__item-profile_input_name"
+              value="Жак-Ив Кусто"
+              name="name-profile"
+              placeholder="Имя профиля"
+              required
+            >
+            <input
+              type="text"
+              class="popup__item-profile popup__item-profile_input_job"
+              value="Исследователь океана"
+              name="about-profile"
+              placeholder="О профиле"
+              required
+            >
+            <button class="popup__save" type="submit">Сохранить</button>
+          </form>
+          <button class="popup__close-form" type="button" aria-label="close-form">
+          </button>
+        </div>
       </div>
-    </div>
+
+      <div class="popup popup_add-card">
+        <div class="popup__container">
+          <h2 class="popup__title">Новое место</h2>
+          <form class="popup__edit-profile" name="form-about-profile">
+            <input
+              type="text"
+              class="popup__item-profile popup__item-profile_input_name"
+              name="name-profile"
+              placeholder="Название"
+              required
+            >
+            <input
+              type="text"
+              class="popup__item-profile popup__item-profile_input_job"
+              name="about-profile"
+              placeholder="Ссылка на картинку"
+              required
+            >
+            <button class="popup__save" type="submit">Сохранить</button>
+          </form>
+          <button class="popup__close-form" type="button" aria-label="close-form">
+          </button>
+        </div>
+      </div>
+    </section>
 
     <template id="card">
       <div class="card">
