fix: change type of input for popupAddCard

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               required
             >
             <input
-              type="text"
+              type="url"
               class="popup__item-profile popup__item-profile_input_job"
               name="about-profile"
               placeholder="Ссылка на картинку"
