feat: add button trush for card

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
           alt=" "
           class="card__element"
         >
+        <button class="card__trash" type="button" aria-label="card-trash">
+        </button>
         <div class="card__info">
           <h2 class="card__title"></h2>
           <button class="card__like" type="button" aria-label="like-heart">
