feat: add function - add new card

--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
             <input
               type="text"
               class="popup__item-profile popup__item-profile_input_name"
-              name="name-profile"
+              value=""
+              name="new-place"
               placeholder="Название"
               required
             >
             <input
               type="url"
               class="popup__item-profile popup__item-profile_input_job"
-              name="about-profile"
+              value=""
+              name="link-image"
               placeholder="Ссылка на картинку"
               required
             >
