feat: add popup-view for images of cards

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="./scripts/script.js" defer></script>
 </head>
 <body class="page">
@@ -105,6 +106,15 @@
           <button class="popup__close-form" type="button" aria-label="close-form">
           </button>
         </div>
+      </div>
+
+      <div class="popup-view">
+          <figure class="popup-view__window">
+            <img src="./images/elbrus.jpg" alt="" class="popup-view__image">
+            <figcaption class="popup-view__about">Эльбрус</figcaption>
+            <button class="popup-view__close" type="button" aria-label="close-view">
+            </button>
+          </figure>
       </div>
     </section>
 
