--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./style.css">
   <script src="./scripts/script.js" defer></script>
 </head>
 <body class="page">
@@ -109,20 +108,22 @@
       </div>
 
       <div class="popup-view">
-          <figure class="popup-view__window">
-            <img src="./images/elbrus.jpg" alt="" class="popup-view__image">
-            <figcaption class="popup-view__about">Эльбрус</figcaption>
+          <div class="popup-view__container">
+            <figure class="popup-view__window">
+              <img src="./images/dombai.jpg" alt="Домбай" class="popup-view__image">
+              <figcaption class="popup-view__about"></figcaption>
+            </figure>
             <button class="popup-view__close" type="button" aria-label="close-view">
             </button>
-          </figure>
+          </div>
       </div>
     </section>
 
     <template id="card">
       <div class="card">
         <img
-          src=" "
-          alt=" "
+          src="./images/kamchatka.jpg"
+          alt="Камчатка"
           class="card__element"
         >
         <button class="card__trash" type="button" aria-label="card-trash">
