--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <section class="popups">
       <div class="popup popup_edit-profile">
-        <div class="popup__container">
+        <div class="popup__container popup__container_form">
           <h2 class="popup__title">Редактировать профиль</h2>
           <form class="popup__edit-profile" name="form-about-profile">
             <input
@@ -81,7 +81,7 @@
       </div>
 
       <div class="popup popup_add-card">
-        <div class="popup__container">
+        <div class="popup__container popup__container_form">
           <h2 class="popup__title">Новое место</h2>
           <form class="popup__edit-profile" name="form-about-profile">
             <input
@@ -107,13 +107,13 @@
         </div>
       </div>
 
-      <div class="popup-view">
-          <div class="popup-view__container">
-            <figure class="popup-view__window">
-              <img src="./images/dombai.jpg" alt="Домбай" class="popup-view__image">
-              <figcaption class="popup-view__about"></figcaption>
+      <div class="popup popup_view">
+          <div class="popup__container">
+            <figure class="popup__window">
+              <img src="./images/elbrus.jpg" alt="Домбай" class="popup__image">
+              <figcaption class="popup__about">Домбай</figcaption>
             </figure>
-            <button class="popup-view__close" type="button" aria-label="close-view">
+            <button class="popup__close-form" type="button" aria-label="close-view">
             </button>
           </div>
       </div>
