--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
   <script src="./scripts/script.js" defer></script>
+  <script src="./scripts/validate.js" defer></script>
 </head>
 <body class="page">
 
@@ -44,7 +45,6 @@
       </section>
 
       <section class="elements page__center">
-
       </section>
     </main>
 
