refactor: edit profile was added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 id="name-input"
                 class="popup__item-profile popup__item-profile_input_name"
                 value="Жак-Ив Кусто"
-                name="name-profile"
+                name="name"
                 placeholder="Имя профиля"
                 minlength="2"
                 maxlength="40"
@@ -76,7 +76,7 @@
                 id="about-input"
                 class="popup__item-profile popup__item-profile_input_job"
                 value="Исследователь океана"
-                name="about-profile"
+                name="about"
                 placeholder="О профиле"
                 minlength="2"
                 maxlength="200"
