refactor: all cod has been edited

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 id="name-place-input"
                 class="popup__item-profile popup__item-profile_input_name"
                 value=""
-                name="new-place"
+                name="name"
                 placeholder="Название"
                 minlength="2"
                 maxlength="30"
@@ -115,7 +115,7 @@
                 id="url-input"
                 class="popup__item-profile popup__item-profile_input_job"
                 value=""
-                name="link-image"
+                name="link"
                 placeholder="Ссылка на картинку"
                 required
               >
