--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
-  <script src="./scripts/pages/index.js" defer type="module"></script>
+  <script src="./pages/index.js" defer type="module"></script>
 </head>
 <body class="page">
 
