--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,29 @@
         </div>
       </div>
 
+      <div class="popup popup_update-avatar">
+        <div class="popup__container popup__container_form">
+          <h2 class="popup__title">Обновить аватар</h2>
+          <form class="popup__edit-profile" name="form-about-profile" novalidate>
+            <label class="popup__field">
+              <input
+                type="url"
+                id="url-input"
+                class="popup__item-profile popup__item-profile_input_job"
+                value=""
+                name="link"
+                placeholder="Ссылка на картинку"
+                required
+              >
+              <span class="popup__input-error url-input-error"></span>
+            </label>
+            <button class="popup__save" type="submit">Сохранить</button>
+          </form>
+          <button class="popup__close-form" type="button" aria-label="close-form">
+          </button>
+        </div>
+      </div>
+
       <div class="popup popup_view">
           <div class="popup__container">
             <figure class="popup__window">
