--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <template id="card">
-      <div class="card">
+      <div class="card" id="">
         <img
           src="<%=require('./images/kamchatka.jpg')%>"
           alt="Камчатка"
