fix: add backet has been corrected

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <template id="card">
-      <div class="card" id="">
+      <div class="card" _id="">
         <img
           src="<%=require('./images/kamchatka.jpg')%>"
           alt="Камчатка"
