feat: edit avatar has been added

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
             alt="Аватар профиля"
             class="profile__avatar"
           >
+          <button class="profile__avatar-edit" type="button"></button>
           <div class="profile__info">
             <div class="profile__row">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
