feat: like card has been added

--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
               >
               <span class="popup__input-error url-input-error"></span>
             </label>
-            <button class="popup__save" type="submit">Сохранить</button>
+            <button class="popup__save" type="submit">Создать</button>
           </form>
           <button class="popup__close-form" type="button" aria-label="close-form">
           </button>
