--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,7 @@
     </section>
 
     <template id="card">
-      <div class="card" _id="">
+      <div class="card" id="">
         <img
           src="<%=require('./images/kamchatka.jpg')%>"
           alt="Камчатка"
