fix: url for input- popup_update-avatar has been corrected

--- a/src/index.html
+++ b/src/index.html
@@ -145,14 +145,14 @@
             <label class="popup__field">
               <input
                 type="url"
-                id="url-input"
+                id="url-input-avatar"
                 class="popup__item-profile popup__item-profile_input_job"
                 value=""
                 name="link"
                 placeholder="Ссылка на картинку"
                 required
               >
-              <span class="popup__input-error url-input-error"></span>
+              <span class="popup__input-error url-input-avatar-error"></span>
             </label>
             <button class="popup__save" type="submit">Сохранить</button>
           </form>
